--- a/MVPEjemplo/app/src/main/res/navigation/nav_graph.xml
+++ b/MVPEjemplo/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.artesanoskuad.mvpejemplo.view.FirstFragment"
+        android:name="com.artesanoskuad.mvpejemplo.view.FirstMVPFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first">
 
