--- a/CheckList/app/src/main/res/layout/fragment_listado_inspecciones.xml
+++ b/CheckList/app/src/main/res/layout/fragment_listado_inspecciones.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListadoDeInspeccionesFragment">
+    tools:context=".view.ListadoDeInspeccionesFragment">
 
     <TextView
         android:id="@+id/tv_listado_de_inspecciones_title"
